unpackaged/main/default/objects/User/listViews/Client_Portal_Users.listView-meta.xml
<ListView>
    <fullName>Client_Portal_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Client Portal Customer Community</value>
    </filters>
    <label>Client Portal Users</label>
</ListView>